added drop shadow to card

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,7 +27,9 @@ import ShareFooter from '../components/ShareFooter.astro';
   </head>
   <body class='min-h-screen bg-grey-200 px-6 py-16 font-manrope'>
     <main>
-      <article class='flex flex-col overflow-hidden rounded-2lg bg-white'>
+      <article
+        class='flex flex-col overflow-hidden rounded-2lg bg-white shadow-(--drop-shadow)'
+      >
         <img
           class='max-h-[12.5rem] object-cover object-(--drawers-position)'
           src='/images/drawers.jpg'
