--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,7 @@
 @import 'tailwindcss';
 
 @theme {
+  --breakpoint-xs: 23.438rem;
   --color-grey-200: #ecf2f8;
   --color-grey-400: #9daec2;
   --color-grey-500: #6e8098;
@@ -8,7 +9,8 @@
   --font-manrope: 'Manrope', 'sans-serif';
   --radius-2lg: 10px;
   --drawers-position: bottom -45px right 0px;
-  --drop-shadow: 0px 40px 40px -10px rgba(201, 213, 225, 0.5);
+  --article-drop-shadow: 0px 40px 40px -10px rgba(201, 213, 225, 0.5);
+  --share-toast-drop-shadow: 0px 10px 10px 0px rgba(201, 213, 225, 0.5);
 }
 
 :root {
