added aria label to share button

--- a/src/components/ShareButton.astro
+++ b/src/components/ShareButton.astro
@@ -12,5 +12,5 @@ const { class: className, id } = Astro.props;
 <button
   id={id}
   class=`grid h-8 w-8 place-content-center rounded-full ${className} hover:cursor-pointer`
-  ><ShareIcon /></button
+  aria-label='Share'><ShareIcon /></button
 >
